--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hibernate_many_to_many
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_portal
 spring.datasource.username=root
 spring.datasource.password=Yuki@2001
 spring.jpa.hibernate.ddl-auto=none
