--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
             <version>2.7.4</version>
         </dependency>
 
-        <!--dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>5.7.3</version>
@@ -84,7 +84,7 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>5.7.3</version>
-        </dependency-->
+        </dependency>
     </dependencies>
 
     <build>
